--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   # 实体类扫描，多个package用逗号或者分号分隔
-  type-aliases-package: com.oldwei.modules.*.entity
+  type-aliases-package: com.ultronvision.bigcats.common.entity.*
   # 全局配置
   global-config:
     # 数据库相关配置
